[package]
name = "nanoleaf"
version = "0.1.1"
description = "Asynchronous client library for interacting with NanoLeaf devices"
repository = "https://github.com/papertigers/nanoleaf"
keywords = ["nanoleaf", "api", "tokio", "automation"]
authors = ["Mike Zeller <mike@mikezeller.net>"]
edition = "2021"
license = "MIT"
categories = [
	"home-automation",
	"api",
	"smart-lighting"
]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
futures = "0.3"
failure = "0.1"
log = "0.4"
tokio = "1"
serde_repr = "0.1"
